# hdr-demo

./: .gitignore  CMakeLists.txt  README.md
src/: app_delegate.h  app_delegate.mm  hdr_layer.h  hdr_layer.mm  main.mm
src/jpeg_hdr/: jpeg_util.cc
src/png/: png_util.h
